--- a/app/src/main/res/drawable/logo_title.xml
+++ b/app/src/main/res/drawable/logo_title.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ MIT License
   ~
@@ -22,21 +23,8 @@
   ~ SOFTWARE.
   -->
 
-<resources>
-    <string name="app_name">Rss Reader</string>
-    <string name="share">Share</string>
-
-    <string name="recyclerview_empty_text">Oops! Something is wrong. Please check your internet connection and try again.</string>
-    <string name="fragment_error">Error somewhere</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <!-- SharedTransitions -->
-    <string name="transition_card" translatable="false">card</string>
-    <string name="description_news">Thumbnail for the news item</string>
-    <string name="title_main">Reader</string>
-
-    <string name="learn_more">Learn more:</string>
-
-</resources>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:drawable="@drawable/logo_bbc"
+        android:right="10dp" />
+</layer-list>
