--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,6 +32,7 @@
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="padding_default">16dp</dimen>
     <dimen name="progressbar_height">150dp</dimen>
+    <dimen name="detail_backdrop_height">256dp</dimen>
 
     <!-- News Item dimensions -->
     <dimen name="cardview_height">80dp</dimen>
@@ -39,5 +40,8 @@
     <dimen name="cardview_corner_radius">4dp</dimen>
     <dimen name="news_image_size">100dp</dimen>
     <dimen name="news_item_padding">4dp</dimen>
+
+    <!-- Coordinated motion -->
+    <dimen name="offset_y">450dp</dimen>
 
 </resources>
