--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="colorPrimary">#cc0000</color>
     <color name="colorPrimaryDark">#990000</color>
     <color name="colorAccent">#0a0a0a</color>
+    <color name="white">#FFFFFF</color>
 </resources>
