--- a/app/src/main/res/layout-sw720dp/item_list.xml
+++ b/app/src/main/res/layout-sw720dp/item_list.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
   ~ Copyright (c) 2016. Dmytro Karataiev
@@ -47,8 +46,9 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragment"
         android:name="com.adkdevelopment.rssreader.ui.ListFragment"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="2"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:layout="@layout/fragment_list" />
 
