--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
 
 <resources>
     <color name="colorPrimary">#cc0000</color>
+    <color name="colorLighter">#ee0000</color>
     <color name="colorPrimaryDark">#990000</color>
     <color name="colorAccent">#0a0a0a</color>
     <color name="white">#FFFFFF</color>
