--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -30,9 +30,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/cardview_height"
     android:layout_marginBottom="@dimen/cardview_task_padding"
-    android:transitionName="@string/transition_card"
-    app:cardCornerRadius="@dimen/cardview_corner_radius"
-    tools:targetApi="lollipop">
+    app:cardCornerRadius="@dimen/cardview_corner_radius">
 
     <RelativeLayout
         android:layout_width="match_parent"
