--- a/app/src/main/res/layout-sw720dp/fragment_list.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_list.xml
@@ -23,6 +23,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -35,7 +36,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true" />
 
-    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
+    <EditText
         android:id="@+id/searchBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,8 +47,7 @@
         android:padding="@dimen/padding_default"
         tools:ignore="InconsistentLayout" />
 
-    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
