feat: privacy policy

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -33,4 +33,10 @@
         android:title="@string/menu_button_settings"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_license"
+        android:orderInCategory="200"
+        android:title="@string/title_activity_license"
+        app:showAsAction="never" />
+
 </menu>
